[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-monitor"
version = "0.2.0"
description = "Live TUI dashboard to monitor Claude Code activity on a server"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Kirill812"}]
dependencies = [
    "textual>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
claude-monitor = "claude_monitor.cli:main"

[project.urls]
Repository = "https://github.com/Kirill812/claude-monitor-cli"
